[Redesign] Fix issues on narrow screens

--- a/src/Bootstrap/less/theme/page-display-package-v2.less
+++ b/src/Bootstrap/less/theme/page-display-package-v2.less
@@ -172,13 +172,19 @@
       border-right: 0px;
     }
 
-    .instructions-displayed {
+    .installation-instruction {
       background-color: #FAF9F8;
       font-size: 14px;
 
       pre {
         background-color: #FAF9F8;
         border: 0px;
+        margin-bottom: 0px;
+        width: 100%;
+      }
+
+      .alert {
+        margin-top: 0px;
       }
     }
   }
@@ -414,59 +420,9 @@
       font-weight: 600;
       text-decoration: underline;
     }
-
-    .tab-content {
-      .tab-pane {
-        > div {
-          display: table;
-          height: 1px;
-        }
-
-        .install-script-row {
-          display: table-row;
-          height: 100%;
-
-          .install-script {
-            display: table-cell;
-            background-color: @panel-footer-bg;
-            font-family: @font-family-monospace;
-            font-size: 1em;
-            color: #fff;
-            width: 100%;
-            max-width: 1px;
-            line-height: 1.5;
-            white-space: pre-wrap;
-            // Add a border with the same color as the background to support visual callout
-            // in high contrast mode (since borders are shown).
-            border-color: @panel-footer-bg;
-            border-style: solid;
-            border-width: 1px 0 1px 1px;
-            user-select: all;
-            vertical-align: middle;
-            word-break: break-word;
-          }
-
-          .copy-button {
-            height: 100%;
-
-            button {
-              height: 100%;
-              min-height: 42px;
-              line-height: 1.5;
-            }
-          }
-        }
-
-        .alert {
-          margin: 0;
-          width: 100%;
-        }
-      }
-    }
   }
 
   .body-tabs {
-
     .nav-tabs > li.active > a {
       border-bottom-color: #0078D4;
       border-bottom-width: 2px;
@@ -504,6 +460,13 @@
     #dependencies-tab {
       li:first-child h4 {
         margin-top: 0px;
+      }
+    }
+
+    #readme-tab {
+      // Don't allow README images to overflow
+      img {
+        max-width: 100%;
       }
     }
   }
